# organizational-network-simulation

./: .gitignore  LICENSE  README.md  pymc-labs_README.md  pyproject.toml
.github/workflows/: check-lockfile.yaml  label_sync.yaml  pr-tests.yaml
analysis/: Persona Sheet.xlsx  config.py  prepare_agent_datasets.py  run_full_analysis.py  utils.py
analysis/modules/: community.py  global_consistency.py  interaction.py  interaction_speaker.py  psych_safety.py  timeseries.py
analysis/引継ぎ/: # 卒論分析プロジェクト 引き継ぎ資料 (完全版 分析01～10).txt  # 探索的分析図鑑構築プロジェクト 引き継ぎ資料 (v10).txt  分析は以下の通りやりました。.txt
analysis/本分析/: config_analysis.py
analysis/雑務/: check_independence.py  check_outliers.py  debug_api_structure.py  diagnose_dept1_cdu.py  independence_report.csv  organize_08_data.py
results/01_network/: nodes_patterns.csv  pattern_1_edges.csv  pattern_2_edges.csv  pattern_3_edges.csv  pattern_4_edges.csv
results/03_questionnaire_ssr/: questionnaire_details_run_001.csv  questionnaire_details_run_002.csv  questionnaire_details_run_003.csv  questionnaire_details_run_004.csv  questionnaire_details_run_005.csv  questionnaire_details_run_006.csv  questionnaire_details_run_007.csv  questionnaire_details_run_008.csv  questionnaire_details_run_009.csv  questionnaire_details_run_010.csv  questionnaire_details_run_011.csv  (+90 more)
semantic_similarity_rating/: __init__.py  compute.py  response_rater.py
simulations/: Persona Sheet.xlsx  a00100_2.xlsx  analyze.py  analyze_network_silo.py  config_prompts.py  config_simulation.py  conversation_simulation.py  create_amos_dataset.py  customer_fb_simulation.py  customer_fb_ssr.py  customer_persona_sheet.csv  demographics.xlsx  generate_network.py  genre_sheet.xlsx  h20026.csv  mk_customer_persona.py  pre_data_shape.py  questionnaire_simulation.py  questionnaire_ssr.py  run_full_simulation.py
tests/: test_compute.py  test_response_rater.py
(+9703 files in other folders)
